# theo-conductor

./: .gitignore  LOG.md  NOTES.md  PLAN.md  README.md  check_kimi_access.py  conductor-prompt.txt  example_output.json  hle.py  main.py  pyproject.toml  temp.py  trace_viewer.py  view_megascience.html  workflow_viewer.html
configs/: frontier_models.yaml  local_large_models.yaml  local_small_models.yaml  models.yaml
examples/: adjudicator.json  best_of_n.json  hle.json  parallel.json  sequential.json  simple.json  single_expert.json
scripts/: download_grpo_models.sh  format_only_grpo.sbatch  judge_megascience_results.py  log_gpu_memory.sh  slurm_local_small_models.sbatch  small_local_model_grpo.sbatch  trace_token_counts.py  visualize_gpu_memory.py
src/theo-conductor/: logger.py  main.py  runner.py  scheduler.py  schema.py  task.py
src/theo_conductor/: artifact.py  benchmark.py  data.py  gpqa.py  grpo.py  hle.py  main.py  prompt.py  runner.py  scheduler.py  schema.py  trace_analysis.py  traces.py  train.py  validate.py
src/theo_conductor/models/: fake.py  openai_compat.py  registry.py
tests/: test_artifact.py  test_benchmark.py  test_check_kimi_access.py  test_grpo.py  test_hle_dataset.py  test_main.py  test_model_registry.py  test_openai_compat.py  test_simple.py  test_trace_analysis.py  test_traces.py  test_train_chat_template.py  test_validate.py
