[project]
name = "theo-conductor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface>=0.0.1",
    "huggingface-hub>=1.21.0",
    "numpy>=2.5.0",
    "openai>=2.44.0",
    "pillow>=12.3.0",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "trl>=1.7.1",
    "wandb>=0.28.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
