[project]
name = "theo-conductor"
version = "0.1.0"
description = "LLM orchestration and routing system"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "vllm==0.22.0+cu129",
    "torch==2.11.0+cu129",
    "torchvision==0.26.0+cu129",
    "torchaudio==2.11.0+cu129",
    "dotenv>=0.9.9",
    "pydantic>=2.13.4",
    "trl>=1.8.0",
    "rich>=15.0.0",
    "transformers>=5.13.1",
    "datasets>=5.0.0",
    "pytest>=9.1.1",
    "sympy>=1.13,<2",
    "colorama>=0.4.6",
    "wandb>=0.19.0",
    "streamlit>=1.59.2",
]

[project.scripts]
theo-trace = "theo_conductor.trace_analysis:main"
theo-benchmark = "theo_conductor.benchmark:main"

[[tool.uv.index]]
name = "vllm-cu129"
url = "https://wheels.vllm.ai/0.22.0/cu129"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
vllm = { index = "vllm-cu129" }
torch = { index = "pytorch-cu129" }
torchvision = { index = "pytorch-cu129" }
torchaudio = { index = "pytorch-cu129" }
